<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scouting</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test knop</string>
    <string name="PlusPlus">++</string>
    <string name="Plus">+</string>
    <string name="Null">0</string>
    <string name="Minus">-</string>
    <string name="MinusMinus">--</string>
    <string name="Reception">Receptie</string>
    <string name="Dig">Verdediging</string>
    <string name="Attack">Aanval</string>
    <string name="Block">Block</string>
    <string name="Pass">Pas</string>
    <string name="Service">Opslag</string>
    <string name="TabScouting">Scouting</string>
    <string name="TabStatistics">Statistics</string>
    <string name="Apply">Apply</string>
    <string name="Reset">Reset</string>
    <string name="Undo">Undo</string>

    <string-array name="Sets">
        <item>Set 1</item>
        <item>Set 2</item>
        <item>Set 3</item>
        <item>Set 4</item>
        <item>Set 5</item>
    </string-array>

    <string name="TabSettings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NewSet">Nieuwe set</string>
    <string name="TabDirections">Directions</string>

</resources>